--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.DespensApp"
         tools:targetApi="31">
         <activity
+            android:name=".AddStoretoStoresActivity"
+            android:exported="false" />
+        <activity
+            android:name=".StoresActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddProductToBuyListActivity"
+            android:exported="false" />
+        <activity
             android:name=".AcomprarActivity"
             android:exported="false" />
         <activity
